--- a/.config/i3/config
+++ b/.config/i3/config
@@ -54,10 +54,14 @@ bindsym $mod+d exec rofi -show run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -66,10 +70,14 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+#bindsym $mod+Shift+j move left
+#bindsym $mod+Shift+k move down
+#bindsym $mod+Shift+l move up
+#bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -78,10 +86,11 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+#bindsym $mod+h split h
+bindsym $mod+bar split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+minus split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -155,10 +164,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -176,9 +185,93 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
+#bar {
+#        status_command i3status
+##        status_command i3blocks
+#}
+# 色
+set $background #2b303b
+set $foreground #c0c5ce
+set $secondary #3f4751
+set $black #2b303b
+set $red #bf616a
+set $green #a3be8c
+set $yellow #ebcb8b
+set $blue #8fa1b3
+set $magenta #b48ead
+set $cyan #96b5b4
+set $white #c0c5ce
+
+#bar {
+#    status_command i3blocks
+#    font pango:Hack Regular 10
+#    mode dock
+#    position top
+#    separator_symbol " │ "
+#    workspace_buttons yes
+#    strip_workspace_numbers yes
+#    binding_mode_indicator yes
+#    tray_output none
+#    tray_padding 0
+#    colors {
+#        background $background
+#        focused_background $background
+#        statusline $blue
+#        focused_statusline $blue
+#        separator $secondary
+#        focused_separator $secondary
+#        # 左からborder, bg, fg
+#        focused_workspace  $blue $blue $background
+#        active_workspace $background $background $foreground
+#        inactive_workspace $background $background $foreground
+#        urgent_workspace   $red $red $background
+#        binding_mode       $blue $blue $background
+#    }
+#}
+
+# Pulse Audio controls
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pkill -SIGRTMIN+1 i3blocks
+#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && pkill -SIGRTMIN+1 i3blocks
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && pkill -SIGRTMIN+1 i3blocks
+#bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ && pkill -SIGRTMIN+1 i3blocks
+#bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%- && pkill -SIGRTMIN+1 i3blocks
+#bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle && pkill -SIGRTMIN+1 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
+
+# backlight
+#bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 && pkill -SIGRTMIN+2 i3blocks
+#bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 && pkill -SIGRTMIN+2 i3blocks
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
+
+# screenshot
+#bindsym Print exec --no-startup-id import -window root ~/Pictures/screenshot`date "+%y%m%d%H%M"`.jpg
+
+# screen lock
+#bindsym Control+Alt+Delete exec --no-startup-id dm-tool lock
+#bindsym Control+Mod1+Delete exec --no-startup-id light-locker-command -l
+bindsym Control+Mod1+Delete exec --no-startup-id "$Locker"
+
+#set $Locker i3lock && sleep 1
+set $Locker light-locker-command -l
+
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
 }
+
+bindsym $mod+Pause mode "$mode_system"
 
 # startup apps
 exec --no-startup-id fcitx
@@ -187,3 +280,6 @@ exec --no-startup-id "feh --bg-scale /usr/share/archlinux/wallpaper/00005257.jpg
 
 # screen lock
 exec --no-startup-id light-locker --lock-on-suspend
+
+# polybar
+exec_always --no-startup-id $HOME/dotfiles/.config/polybar/scripts/launch.sh
