--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -74,7 +74,7 @@ module-margin-right = 1
 ;==========================================================
 
 #font-0 = "Fantasque Sans Mono:pixelsize=12;2"
-font-0 = "Fantasque Sans Mono Nerd:pixelsize=12;2"
+font-0 = "Fantasque Sans Mono Nerd:pixelsize=13;4"
 #font-1 = "Material Icons:size=13;4"
 font-1 = "Material Icons:size=13;4"
 font-2 = "Iosevka Nerd Font:pixelsize=13;3"
@@ -94,7 +94,7 @@ scroll-down = i3wm-wsprev
 ;== Module Location ========================================================
 
 modules-left = arch workspaces term files browser settings
-modules-right = memory cpu pkg volume backlight network keyboard battery date powermenu
+modules-right = memory cpu pkg volume backlight network bluetooth keyboard battery date powermenu
 #modules-right = mpd pkg volume battery network date powermenu
  
 ;== Modules ========================================================
@@ -107,8 +107,8 @@ content = 
 content-padding = 2
 #content-background = ${color.acolor}
 content-background = ${color.acolor}
-#content-foreground = ${color.fg}
-content-foreground = ${color.blue}
+content-foreground = ${color.fg}
+#content-foreground = ${color.black}
 click-left = $HOME/dotfiles/.config/polybar/scripts/rmenu_g
 click-middle = $HOME/dotfiles/.config/polybar/scripts/rfull
 click-right = $HOME/dotfiles/.config/polybar/scripts/rmenu_wi_g
@@ -212,22 +212,33 @@ format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = %percentage%%
 format-full = <label-full>
 
-format-full-prefix = " "
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+#format-full-prefix = " "
+#ramp-capacity-0 = 
+#ramp-capacity-1 = 
+#ramp-capacity-2 = 
+#ramp-capacity-3 = 
+#ramp-capacity-4 = 
+format-full-prefix = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
 ramp-capacity-0-foreground = ${color.red}
 ramp-capacity-foreground   = ${color.fg}
 bar-capacity-width = 10
 
-animation-charging-0 = ""
-animation-charging-1 = ""
-animation-charging-2 = ""
-animation-charging-3 = ""
-animation-charging-4 = ""
+#animation-charging-0 = ""
+#animation-charging-1 = ""
+#animation-charging-2 = ""
+#animation-charging-3 = ""
+#animation-charging-4 = ""
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 
 animation-charging-framerate = 750
 
@@ -423,7 +434,7 @@ format = <label>
 
 ; Available tokens:
 ;   %percentage% (default)
-label = %percentage%%
+label = %percentage%%
 
 ; Only applies if <ramp> is used
 ramp-0 = 🌕
@@ -437,5 +448,19 @@ bar-width = 10
 bar-indicator = |
 bar-fill = ─
 bar-empty = ─
+
+[module/bluetooth]
+#type = custom/script
+type = custom/text
+#exec = echo "%{F#98c379}"
+#exec-if = echo info | bluetoothctl | grep 'Device'
+content = 
+#exec-if = echo info | bluetoothctl | grep 'Device'
+#interval = 10
+click-left = blueman-manager &
+#click-right = exec blueman-manager
+format-padding = 1
+#format-background = ${colors.mono4}
+#format-foreground = ${colors.mono2}
 
 ;== EOF ========================================================
